--- a/404.html
+++ b/404.html
@@ -14,7 +14,7 @@
 <body>
 	<div class="container">
 		<div class="jumbotron">
-			<h1>Página não encontrada!<h1>
+			<h1>Página não encontrada!</h1>
 			<hr>
 			<p class="text-primary"><a href="/">Voltar para a página principal.</a></p>
 		</div>
