Correções de Bugs

--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta id="viewport" name="viewport" content="width=device-width, initial-scale=1">
-	<title>MicroBlog</title>
+	<title>Página não encontrada! | MicroBlog</title>
 	<!-- Bootstrap CSS -->
     <link rel="stylesheet" type="text/css" href="/public/vendor/bootstrap/dist/css/bootstrap.css">
     <!-- outro css -->
@@ -16,7 +16,8 @@
 		<div class="jumbotron">
 			<h1>Página não encontrada!</h1>
 			<hr>
-			<p class="text-primary"><a href="/">Voltar para a página principal.</a></p>
+			<p>Foi mal! Nosso servidor não encontrou a página solicitada.</p>
+			<p class="text-primary">Você pode <a href="/">Voltar para a página principal.</a></p>
 		</div>
 	</div>
 
