--- a/50x.html
+++ b/50x.html
@@ -1,21 +1,31 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
 <head>
-<title>Error</title>
-<style>
-    body {
-        width: 35em;
-        margin: 0 auto;
-        font-family: Tahoma, Verdana, Arial, sans-serif;
-    }
-</style>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta id="viewport" name="viewport" content="width=device-width, initial-scale=1">
+	<title>Erro do servidor! | MicroBlog</title>
+	<!-- Bootstrap CSS -->
+    <link rel="stylesheet" type="text/css" href="/public/vendor/bootstrap/dist/css/bootstrap.css">
+    <!-- outro css -->
+    <link rel="stylesheet" type="text/css" href="/public/assets/css/main.css">
 </head>
+
 <body>
-<h1>An error occurred.</h1>
-<p>Sorry, the page you are looking for is currently unavailable.<br/>
-Please try again later.</p>
-<p>If you are the system administrator of this resource then you should check
-the <a href="http://nginx.org/r/error_log">error log</a> for details.</p>
-<p><em>Faithfully yours, nginx.</em></p>
+	<div class="container">
+		<div class="jumbotron">
+			<h1>Foi mal!</h1>
+			<hr>
+			<p>Nosso servidor encontrou algum erro e não pode continuar.</p>
+			<p class="text-primary">Você pode <a href="/">voltar para a página principal.</a></p>
+		</div>
+	</div>
+
+	<!-- Carrega os scripts e bibliotecas javascript -->
+	<script type="text/javascript" src="/public/vendor/jquery/dist/jquery.js"></script>
+    <script type="text/javascript" src="/public/vendor/popper.js/dist/umd/popper.js"></script>
+    <script type="text/javascript" src="/public/vendor/bootstrap/dist/js/bootstrap.js"></script>
+	<script type="text/javascript" src="/public/assets/js/main.js"></script>
 </body>
+
 </html>
